# ai-agents-clinic

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  tools.yaml
clinic_agent/: agent.py
database/: clinic.db
reservation_agent/: __main__.py  agent.py  agent_executor.py
scripts/: setup_data.py  test_a2a_agent_local.py  test_invoke.py  verify_seed.py
telegram-integration/: main.py  requirements.txt
