[project]
name = "ai-agents-clinic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk==0.3.26",
    "google-adk==1.29.0",
    "google-cloud-aiplatform[adk,agent-engines]==1.149.0",
    "google-genai>=1.64.0,<2.0.0",
    "python-dotenv>=1.2.2",
    "toolbox-adk==1.0.0",
    "uvicorn>=0.49.0",
]
